LU-4958 lov: don't crash accessing LOV object with FID{0,0}

Some object maybe has a corrupted LOV EA or a hole in
LOV EA. We should not crash client in such case.

This is a back-port patch from master:
Lustre-change: http://review.whamcloud.com/10042
Lustre-commit: 754bf71c650c427acfb0fe35017e8f9c1eb9fa7d

Signed-off-by: Fan Yong <fan.yong@intel.com>
Signed-off-by: Yang Sheng <yang.sheng@intel.com>
Change-Id: I08cdd770c369eb51aa92b04a838fbb6784d36bad
Reviewed-on: http://review.whamcloud.com/12740
Tested-by: Jenkins
Reviewed-by: Jian Yu <jian.yu@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>